--- a/train_model.ipynb
+++ b/train_model.ipynb
@@ -502,8 +502,94 @@
    "execution_count": null,
    "id": "1b2e508a",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble Results:\n",
+      "'Hello, how are you today?' -> English (enhanced model, conf: 0.324)\n",
+      "'Thank you very much' -> English (enhanced model, conf: 0.301)\n",
+      "'Bonjour, comment allez-vous?' -> French (enhanced model, conf: 0.700)\n",
+      "'Gracias por todo' -> Spanish (enhanced model, conf: 0.501)\n",
+      "Original results:\n",
+      "'Hello, how are you today?' -> Cornish (original model)\n",
+      "'Thank you very much' -> Shona (original model)\n",
+      "'Bonjour, comment allez-vous?' -> French (original model)\n",
+      "'Gracias por todo' -> Spanish (original model)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\nensemble_predictions = []\\nfor text in X_test:\\n    pred, _, _ = ensemble_predict(text)\\n    ensemble_predictions.append(pred)\\n\\nensemble_accuracy = accuracy_score(y_test, ensemble_predictions)\\nprint(f\"\\nTest Set Accuracies:\")\\nprint(f\"Original Model: {accuracy:.4f}\")\\nprint(f\"Enhanced Model: {accuracy_over:.4f}\") \\nprint(f\"Ensemble Model: {ensemble_accuracy:.4f}\")\\n'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ensemble_predict(text):\n",
+    "    orig_features = vectorizer.transform([text])\n",
+    "    orig_proba = naive_bayes_model.predict_proba(orig_features)[0]\n",
+    "    orig_pred = naive_bayes_model.predict(orig_features)[0]\n",
+    "    orig_confidence = orig_proba.max()\n",
+    "    \n",
+    "    over_features = over_vectorizer.transform([text])\n",
+    "    over_proba = naive_bayes_model_over.predict_proba(over_features)[0]\n",
+    "    over_pred = naive_bayes_model_over.predict(over_features)[0]\n",
+    "    over_confidence = over_proba.max()\n",
+    "    \n",
+    "    # Use the more confident prediction\n",
+    "    if over_confidence > orig_confidence:\n",
+    "        return over_pred, \"enhanced\", over_confidence\n",
+    "    else:\n",
+    "        return orig_pred, \"original\", orig_confidence\n",
+    "\n",
+    "test_phrases = [\n",
+    "    \"Hello, how are you today?\",\n",
+    "    \"Thank you very much\", \n",
+    "    \"Bonjour, comment allez-vous?\",\n",
+    "    \"Gracias por todo\"\n",
+    "]\n",
+    "\n",
+    "print(\"Ensemble Results:\")\n",
+    "for phrase in test_phrases:\n",
+    "    pred, model_used, conf = ensemble_predict(phrase)\n",
+    "    lang_name = label_map.get(pred, pred)\n",
+    "    print(f\"'{phrase}' -> {lang_name} ({model_used} model, conf: {conf:.3f})\")\n",
+    "\n",
+    "print(\"Original results:\")\n",
+    "for phrase in test_phrases:\n",
+    "    orig_features = vectorizer.transform([phrase])\n",
+    "    orig_pred = naive_bayes_model.predict(orig_features)[0]\n",
+    "    lang_name = label_map.get(orig_pred, orig_pred)\n",
+    "    print(f\"'{phrase}' -> {lang_name} (original model)\")\n",
+    "\n",
+    "\n",
+    "ensemble_predictions = []\n",
+    "for text in X_test:\n",
+    "    pred, _, _ = ensemble_predict(text)\n",
+    "    ensemble_predictions.append(pred)\n",
+    "\n",
+    "ensemble_accuracy = accuracy_score(y_test, ensemble_predictions)\n",
+    "print(f\"\\nTest Set Accuracies:\")\n",
+    "print(f\"Original Model: {accuracy:.4f}\")\n",
+    "print(f\"Enhanced Model: {accuracy_over:.4f}\") \n",
+    "print(f\"Ensemble Model: {ensemble_accuracy:.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83eb8768",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Test the "
+   ]
   },
   {
    "cell_type": "markdown",
